# civ5-p2p

./: Cargo.toml  LICENCE-MIT  LICENSE-APACHE  README.md  index.ts  package-lock.json  package.json
civ5-p2p-app/: Cargo.toml
civ5-p2p-app/src/: main.rs
civ5-p2p-cli/: Cargo.toml  history.txt
civ5-p2p-cli/src/: lib.rs  main.rs
civ5-p2p-core/: Cargo.toml
civ5-p2p-core/src/: lib.rs
civ5-p2p-ui/: Cargo.toml
civ5-p2p-ui/src/: lib.rs  main.rs
src/: main.rs
