[package]
name = "civ5-p2p-app"
version = "0.1.0"
authors = ["gak <gak@gak0.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
civ5-p2p-core = { path = "../civ5-p2p-core" }
civ5-p2p-cli = { path = "../civ5-p2p-cli" }
civ5-p2p-ui = { path = "../civ5-p2p-ui" }

async-std = { version = "1.6.5", features = ["attributes"] }
anyhow = "1.0.33"
