[package]
name = "civ5-p2p-cli"
version = "0.1.0"
authors = ["gak <gak@gak0.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
civ5-p2p-core = { path = "../civ5-p2p-core" }

libp2p = { version = "0.28.1" }
async-std = { version = "1.6.5", features = ["attributes"] }
anyhow = "1.0.33"
rustyline = "6.3.0"
futures = "0.3.6"
